# cpp_template

./: .gitignore  CMakeLists.txt  configure.sh
src/: CMakeLists.txt  main.cpp
test/ctest/: CMakeLists.txt
